# word-prediction

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  predict-next-word-seqeunce.sh  predict-next-word.sh  pyproject.toml  run.sh
src/: config.py  naive_word_prediction.py
src/naive/: __init__.py  indexer.py  naive_word_prediction.py  naive_word_sequence_prediction.py
src/utils/: db.py  string.py
